# aima-toolkit

./: pyproject.toml
src/aima_toolkit/Chapter3/: a_star_search.py  depth_first_search.py  depth_limited_search.py  iterative_deepening_search.py  uniform_cost_search.py
src/aima_toolkit/Chapter3/SearchProblemPackage/: queue.py
src/aima_toolkit/Chapter4/LocalSearch/: hill_climbing.py  simulated_annealing.py  stochastic_hill_climbing.py
src/aima_toolkit/ConstraintSatisfactionProblemPackage/: constraint_satisfaction_problem.py
src/aima_toolkit/ConstraintSatisfactionProblemPackage/ConstraintPropagation/: ac3_propagation.py  node_constraint_propagation.py
src/aima_toolkit/ConstraintSatisfactionProblemPackage/PremadeConstraints/: alldiff_constraint.py
src/aima_toolkit/Problems/: __init__.py  eight_queen_problem.py  find_the_ip_phone.py  romania_search_problem.py  simple_tree_search_problem.py  vacuum_world.py
src/aima_toolkit/SearchProblemPackage/: __init__.py  expand.py  node.py  queue.py  search_problem.py  searchproblem.py
tests/CSP/constraint_propagation/: test_ac3.py  test_node_consistency.py
tests/CSP/formulation/: test_CSP_formulation.py
tests/CSP/premade_constraints/: test_alldiff_constraint.py
tests/LocalSearch/: test_hill_climb.py
tests/problems/: test_eight_queen.py  tree_search_problem.py
tests/queue/: test_prio_queue.py
tests/search_algorithms/: test_depth_first_search.py  test_depth_iterative_and_deepening_search.py  test_partial_observability.py  test_ucs.py
tests/search_algorithms/online_search/: test_online_search.py
(+11 files in other folders)
