[build-system]
requires = ["hatchling >= 1.26", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "aima_toolkit"
authors = [
  { name="Emre Arapcic-Uevak", email="emrearapcicuevak@gmail.com" },
]
description = "I made this package to help me on my learning journey through the AIMA book and contains all algorithms I build whilst learning through the book"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/EmreArapcicUevak/aima-toolkit"
Issues = "https://github.com/EmreArapcicUevak/aima-toolkit/issues"

[tool.hatch.version]
source = "vcs"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1"
]